# learn-cmake

example1/: CMakeLists.txt  READEM.md  README.md  main.cpp
example2/: CMakeLists.txt  README.md
example2/src/: CMakeLists.txt  hello1.cpp  hello1.h
example2/src/hello2/: hello2.cpp  hello2.h
example2/test/: CMakeLists.txt  test.cpp
